Bug 426596 - Application: "akonadi_archivemail_agent" crashed after closing "Configure automatic archving..."-Dialog
Summary: Application: "akonadi_archivemail_agent" crashed after closing "Configure aut...
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Archive Mail Agent (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2020-09-16 11:45 UTC by Günther Gora
Modified: 2020-09-16 16:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Günther Gora 2020-09-16 11:45:15 UTC
Application: akonadi_archivemail_agent (5.15.1 (20.08.1))

Qt Version: 5.15.1
Frameworks Version: 5.73.0
Operating System: Linux 5.8.7-1-default x86_64
Windowing system: X11
Distribution: openSUSE Tumbleweed

-- Information about the crash:
- What I was doing when the application crashed:
checked "Configure automatic archving..." which job is completed
closed this dialog with "OK
after a few seconds the aplication crashed

The crash can be reproduced every time.

-- Backtrace:
Application: akonadi_archivemail_agent (akonadi_archivemail_agent), signal: Segmentation fault

[KCrash Handler]
#4  0x00007f4219733b39 in MailCommon::Util::fullCollectionPath (collection=..., addAccountName=<optimized out>) at /usr/src/debug/mailcommon-20.08.1-1.1.x86_64/src/util/mailutil.cpp:113
#5  0x000055b925aba7eb in ArchiveMailManager::backupDone (this=0x55b9261fc1f0, info=<optimized out>) at /usr/src/debug/kmail-20.08.1-1.1.x86_64/agents/archivemailagent/archivemailmanager.cpp:115
#6  0x000055b925abbf28 in ArchiveJob::slotBackupDone (this=0x55b9263d7f10, info=...) at /usr/src/debug/kmail-20.08.1-1.1.x86_64/agents/archivemailagent/job/archivejob.cpp:125
#7  0x00007f42188ef646 in QtPrivate::QSlotObjectBase::call (a=0x7ffd0a415000, r=0x55b9263d7f10, this=0x55b926413e20) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#8  doActivate<false> (sender=0x55b92643d370, signal_index=3, argv=argv@entry=0x7ffd0a415000) at kernel/qobject.cpp:3886
#9  0x00007f42188e89a0 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7f421982c1e0, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffd0a415000) at kernel/qobject.cpp:3946
#10 0x00007f4219721872 in MailCommon::BackupJob::backupDone (this=<optimized out>, _t1=...) at /usr/src/debug/mailcommon-20.08.1-1.1.x86_64/build/src/KF5MailCommon_autogen/AYU7XCIYTN/moc_backupjob.cpp:143
#11 0x00007f421976a10d in MailCommon::BackupJob::finish (this=0x55b92643d370) at /usr/src/debug/mailcommon-20.08.1-1.1.x86_64/src/job/backupjob.cpp:214
#12 0x00007f42188e5091 in QObject::event (this=0x55b92643d370, e=0x7f41bc037210) at kernel/qobject.cpp:1314
#13 0x00007f4218dad14f in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x55b92643d370, e=0x7f41bc037210) at kernel/qapplication.cpp:3630
#14 0x00007f42188b905a in QCoreApplication::notifyInternal2 (receiver=0x55b92643d370, event=0x7f41bc037210) at ../../include/QtCore/5.15.1/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:325
#15 0x00007f42188bba91 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x55b925e2c630) at kernel/qcoreapplication.cpp:1817
#16 0x00007f4218910f23 in postEventSourceDispatch (s=0x55b925f5d860) at kernel/qeventdispatcher_glib.cpp:277
#17 0x00007f42159242b7 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#18 0x00007f4215924638 in ?? () from /usr/lib64/libglib-2.0.so.0
#19 0x00007f42159246ef in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#20 0x00007f42189105af in QEventDispatcherGlib::processEvents (this=0x55b925f66db0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#21 0x00007f42188b7a1b in QEventLoop::exec (this=this@entry=0x7ffd0a415490, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#22 0x00007f42188bfc90 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#23 0x000055b925ab6c0c in Akonadi::AgentBase::init<ArchiveMailAgent> (argv=<optimized out>, argc=<optimized out>) at /usr/src/debug/kmail-20.08.1-1.1.x86_64/agents/archivemailagent/archivemailagent.cpp:75
#24 main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kmail-20.08.1-1.1.x86_64/agents/archivemailagent/archivemailagent.cpp:152
[Inferior 1 (process 2483) detached]

Possible duplicates by query: bug 425786, bug 424232, bug 415991, bug 411883, bug 410345.

Reported using DrKonqi
Comment 1 Laurent Montel 2020-09-16 14:46:13 UTC
I onfirm it
Comment 2 Laurent Montel 2020-09-16 16:52:43 UTC
Git commit 0922a95a692f6424773cd28f21a83237a60d226f by Laurent Montel.
Committed on 16/09/2020 at 16:51.
Pushed by mlaurent into branch 'release/20.08'.

Fix Bug 426596 - Application: "akonadi_archivemail_agent" crashed after closing "Configure automatic archving..."-Dialog
Related: bug 425786, bug 424232

M  +6    -0    agents/archivemailagent/archivemailkernel.cpp
M  +2    -0    agents/archivemailagent/archivemailkernel.h
M  +1    -1    agents/archivemailagent/archivemailmanager.cpp
M  +1    -2    agents/archivemailagent/archivemailwidget.cpp

https://invent.kde.org/pim/kmail/commit/0922a95a692f6424773cd28f21a83237a60d226f