Fix Bug 426596 - Application: "akonadi_archivemail_agent" crashed after closing "Configure automatic archving..."-Dialog

BUG: 426596
BUG: 425786
BUG: 424232